# ranitask

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: ranify2.manifest  ranitask.manifest
installer/: ranify2.iss  ranitask.iss
src/: burst.rs  config.rs  hotkeys.rs  hp_monitor.rs  main.rs  network.rs  pet_cycle.rs  player.rs  recorder.rs  sequence.rs  storage.rs  timing.rs  win32_helpers.rs
src/gui/: add_binding.rs  bind_key.rs  mod.rs  remote.rs  rename_dialog.rs  save_dialog.rs  sequences.rs  set_group_dialog.rs  settings.rs  toolbar.rs
